openmetadata-docs/content/v1.2.x/main-concepts/metadata-standard/schemas/type/tableQuery.md
---
title: tableQuery
slug: /main-concepts/metadata-standard/schemas/type/tablequery
---

# Table Queries

*This schema defines structure of table query*

## Properties

- **`queries`** *(array)*: Date of execution of SQL query.
  - **Items**: Refer to *[#/definitions/tableQuery](#definitions/tableQuery)*.
## Definitions

- <a id="definitions/tableQuery"></a>**`tableQuery`**
  - **`query`** *(string, required)*: SQL query.
  - **`query_type`** *(string)*: SQL query type.
  - **`exclude_usage`** *(boolean)*: Flag to check if query is to be excluded while processing usage.
  - **`userName`** *(string)*: Name of the user that executed the SQL query.
  - **`startTime`** *(string)*: Start time of execution of SQL query.
  - **`endTime`** *(string)*: End time of execution of SQL query.
  - **`analysisDate`**: Date of execution of SQL query. Refer to *[./basic.json#/definitions/dateTime](#basic.json#/definitions/dateTime)*.
  - **`aborted`** *(boolean)*: Flag to check if query was aborted during execution.
  - **`serviceName`** *(string, required)*: Name that identifies this database service.
  - **`databaseName`** *(string)*: Database associated with the table in the query.
  - **`databaseSchema`** *(string)*: Database schema of the associated with query.
  - **`duration`** *(number)*: How long did the query took to run in seconds.


Documentation file automatically generated at 2023-10-27 11:39:15.608628.
